--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,13 +1,13 @@
 <%= form_for(@user) do |f| %>
-  <% if @something.errors.any? %>
-  <div id="errorExplanation">
-    <h2><%= pluralize(@something.errors.count, "error") %> prohibited this something from being saved:</h2>
-    <ul>
-    <% @something.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-    </ul>
-  </div>
+  <% if @user.errors.any? %>
+    <div id="errorExplanation">
+      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
+      <ul>
+      <% @user.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
   <% end %>
 
   <div class="field">
